--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     
     <title>tech</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/tech.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="all.min.css">
+    <link rel="stylesheet" href="tech.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,500;1,100&display=swap" rel="stylesheet">
 </head>
 <body>
-    <script src="js/my.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/all.min.js"></script>
+
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
           <a class="navbar-brand" href="#">
@@ -206,7 +204,8 @@
           </div>
         </div>
       </div>
-<script src="js/all.min.js"></script>
-<script src="js/my.js"></script>
+<script src="my.js"></script>
+<script src="bootstrap.bundle.min.js"></script>
+<script src="all.min.js"></script>
 </body>
 </html>
